@@ -87,7 +87,7 @@ public class ItemUnifiedTableHeaderBuilder implements UnifiedTableHeaderBuilder<
     public static List<Cell> getHeaders() {
       return Arrays.stream(values())
         .map(v -> new Cell().value(v.value).dataType(v.dataType).visible(v.visible))
-        .collect(Collectors.toList());
+        .toList();
     }
   }
 
